force-app/main/default/objects/CTRUser__c.object
<CustomObject>
    <fields>
        <fullName>CompanyName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompanyName</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR User</relationshipLabel>
        <relationshipName>CTR_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InitialPasswordSecret__c</fullName>
        <label>Initial Password Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialPassword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitialResetPasswordURL__c</fullName>
        <formula>$Setup.CTRConfig__c.HerokuDomain__c +&apos;/initial-password?secret=&apos;+ InitialPasswordSecret__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InitialResetPasswordURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTemporary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastChangeDate__c</fullName>
        <label>Last Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetPasswordSecret__c</fullName>
        <label>Reset Password Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetPasswordURL__c</fullName>
        <formula>$Setup.CTRConfig__c.HerokuDomain__c +&apos;/verify-security-question?secret=&apos;+ ResetPasswordSecret__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reset Password URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetPassword__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecurityAnswer__c</fullName>
        <label>Security Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityQuestion__c</fullName>
        <label>Security Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemporaryLoginURL__c</fullName>
        <formula>$Setup.CTRConfig__c.HerokuDomain__c +&apos;/one-time-access&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temporary Login URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VerificationCodeCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verification Code Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR User (Verification Code Customer)</relationshipLabel>
        <relationshipName>CTRUserVerificationCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VerificationCodeExpiry__c</fullName>
        <label>Verification Code Expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VerificationCode__c</fullName>
        <label>Verification Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CTR User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTR User Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Administrator</fullName>
        <active>true</active>
        <label>Administrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>User</fullName>
        <active>true</active>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>